# compare-primary-schools-mazowieckie

./: .gitignore  CLAUDE.md  MAP_APP_BRIEF.md  README.md  pyproject.toml
.claude/: settings.json
data/: school_coords.csv  school_coords_unmapped.csv
data/egzamin-osmoklasisty/: 2021 - bip_1266e8-2021-wyniki-szkoly__SAS.xlsx.xlsx  2022 - bip_1466okewaw_wyniki_e8_szkoly_aktl_wrzesien.xlsx.xlsx  2023 - bip_1590e8-2023-okewaw--wyniki-szkoly-glowna-sas.xlsx.xlsx  2024 - bip_1777OKEWAW_Wyniki_E8_szkoly.xlsx.xlsx  2025 - OKEWAW-Wyniki-E8-szkoly-lipiec.xlsx  bip_1143E8_2020_termin_glowny_wyniki_srednie__szkoly.xlsx.xlsx
docs/: app.js  index.html  map.js  ranking.html  ranking.js  style.css
docs/data/: schools-base.json
notebooks/: analiza.ipynb  how_to_measure_school_quality.ipynb
output/: rejected_schools.xlsx  schools-base.json
outputs/: rejected_schools.csv  rejected_schools.xlsx
scripts/: geocode_schools.py
