[project]
name = "compare-primary-schools-mazowieckie"
version = "0.1.0"
description = "Analysis of 8th-grade exam results for primary schools in the Mazowieckie voivodeship."
requires-python = ">=3.11"
dependencies = [
    "jupyterlab",
    "matplotlib",
    "notebook>=7.5.6",
    "numpy",
    "openpyxl",
    "pandas",
    "scipy>=1.17.1",
    "seaborn",
    "xlsxwriter>=3.2.9",
]
